# merak-agent

./: .coverage  .env.example  AGENTS.md  README.md  pyproject.toml  requirements.txt
.agent/: README.md
.agent/System/: chatkit-docs.md  project_architecture.md
.agent/Tasks/: chatkit_integration.md  chatkit_nextjs_integration_plan.md  frontend_next_plan.md  frontend_phase3_progress.md  trip_planner.md
.agents/: README.md
.agents/System/: project_architecture.md
.agents/Tasks/: trip_planner.md
frontend/: README.md
frontend/merak_web/: .gitignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
frontend/merak_web/__tests__/: home.test.tsx
frontend/merak_web/app/: globals.css  layout.tsx  page.tsx
frontend/research/: index.html
scripts/: run_chatkit_prototype.py  run_chatkit_server.py  run_trip_planner.py
src/merak_agent/: __init__.py
src/merak_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/merak_agent/agents/: __init__.py  trip_planner.py
src/merak_agent/common/: destinations.py
src/merak_agent/tools/: __init__.py  destination_lookup.py
src/merak_agent/workflows/: __init__.py  chat_cli.py  chatkit_server.py  memory_store.py
tests/agents/: test_trip_planner_agent.py
tests/tools/: test_destination_lookup.py
tests/workflows/: test_chat_cli.py  test_chatkit_server_app.py
