[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "merak-agent"
version = "0.1.0"
description = "Trip planning agent powered by the OpenAI Agents Python SDK."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.2.9",
    "openai-chatkit>=0.1.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx[sse]>=0.27.0",
    "python-dotenv>=1.0.1",
    "aiosqlite>=0.20.0",
    "typing_extensions>=4.9",
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
